kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: epicalendar
    labels:
        name: epicalendar
        app: epicalendar
